src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #e23692;
  --ifm-color-primary-dark: #c83382;
  --ifm-color-primary-darker: #af2f72;
  --ifm-color-primary-darkest: #972c62;
  --ifm-color-primary-light: #e8559e;
  --ifm-color-primary-lighter: #ee70aa;
  --ifm-color-primary-lightest: #f387b7;
  --ifm-code-font-size: 95%;
  --ifm-link-color: #c83382;
  --ifm-background-color: white;
  --docusaurus-highlighted-code-line-bg: rgb(200, 201, 204);
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.theme-doc-toc-desktop,
.col--3 {
  background-color: var(--ifm-background-color);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.prism-code .token-line::marker {
  color: var(--ifm-color-gray-700);
  content: counter(line-number);
}

.profile-section {
  display: flex;
  flex-direction: row;
  padding-bottom: 24px;
}

.social-links {
  margin-left: 24px;
  padding: 8px;
}

.social-link {
  height: 2.5em;
}

.social-links a {
  color: #252423;
}

.social-links a:hover {
  text-decoration: none;
}

div.support-container {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  grid-gap: 1em;
  align-content: center;
  text-align: center;
  line-height: 130%;
}

div.support-container img.community-expert-image {
  align-content: center;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  max-width: 150px;
  max-height: 150px;
  border-radius: 2.5%;
  width: auto;
  height: auto;
}

div.support-container span.contribution-area {
  font-style: italic;
  font-size: small;
}


div.support-container span.name {
  font-weight: 800;
}

